--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
+    "bootstrap": "^5.1.1",
+    "jquery": "^3.6.0",
+    "ngx-mat-select-search": "^3.3.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -28,6 +31,7 @@
     "@angular/cli": "~11.2.3",
     "@angular/compiler-cli": "~11.2.4",
     "@types/jasmine": "~3.6.0",
+    "@types/jquery": "^3.5.6",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
